test/try_fail_errors/bool.yasl.err
TypeError: bool.tobool expected arg in position 0 to be of type bool, got arg of type int. (line 1)
TypeError: bool.tostr expected arg in position 0 to be of type bool, got arg of type int. (line 2)
TypeError: bool.__bor expected arg in position 1 to be of type bool, got arg of type int. (line 3)
TypeError: bool.__bor expected arg in position 0 to be of type bool, got arg of type int. (line 4)
TypeError: bool.__band expected arg in position 1 to be of type bool, got arg of type int. (line 5)
TypeError: bool.__band expected arg in position 0 to be of type bool, got arg of type int. (line 6)
TypeError: bool.__bxor expected arg in position 1 to be of type bool, got arg of type int. (line 7)
TypeError: bool.__bxor expected arg in position 0 to be of type bool, got arg of type int. (line 8)
TypeError: bool.__bandnot expected arg in position 1 to be of type bool, got arg of type int. (line 9)
TypeError: bool.__bandnot expected arg in position 0 to be of type bool, got arg of type int. (line 10)
TypeError: bool.__bnot expected arg in position 0 to be of type bool, got arg of type int. (line 11)