test/try_fail_errors/bool.yasl
mt.lookup(true, .tobool)(1)
mt.lookup(true, .tostr)(1)
mt.lookup(true, .__bor)(true, 1)
mt.lookup(true, .__bor)(1, true)
mt.lookup(true, .__band)(true, 1)
mt.lookup(true, .__band)(1, true)
mt.lookup(true, .__bxor)(true, 1)
mt.lookup(true, .__bxor)(1, true)
mt.lookup(true, .__bandnot)(true, 1)
mt.lookup(true, .__bandnot)(1, true)
mt.lookup(true, .__bnot)(1, true)